--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.0.2
-gunicorn==20.1.0
-scikit-learn==1.0
-numpy==1.21.2
 pandas==1.3.3
 Flask==2.0.2
 numpy==1.21.2
+scikit-learn==1.0
+Flask==2.0.2
+gunicorn==20.1.0
+numpy==1.23.5  # Ensure numpy is listed here
 scikit-learn==1.0
