--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 
-scikit-learn==1.0
+numpy==1.21.2
 Flask==2.0.2
 pandas==1.3.3
-numpy==1.21.6  # Adjust this to a compatible version if needed
 setuptools>=51.0.0
 wheel==0.36.2
-gunicorn==20.1.0  # If you're using Gunicorn as the WSGI server
+gunicorn==20.1.0
+scikit-learn==1.0.2 
