--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 
 
 
-numpy==1.25.2
+numpy==1.24.3
 scikit-learn==1.3.0
 Flask==2.3.3
 pandas==2.0.3
-setuptools>=65.5.0
-wheel==0.40.0
+setuptools>=67.0.0
+wheel>=0.41.0
 gunicorn==20.1.0
+
